# gcp_utils

./: .gitignore  README.md  archi.drawio
.github/workflows/: pipeline-func-helloworld.yaml  pipeline.yaml
cloudrun-api/: Readme.md  __init__.py
cloudrun-api/cloudrun-api/: main.py
functions/: .gitignore
functions/func-helloworld/: readme.md
functions/func-weather/: explo.ipynb  readme.md
pocrapi/: Dockerfile  Readme.md  cloudbuild.yaml  pyproject.toml
pocrapi/pocrapi/: gunicorn_config.py  main.py
pocrapi/pocrapi/models/: city.py  weather.py
pocrapi/tests/: test_pocrapi.py
poetry-app-api/: pyproject.toml
poetry-app-api/tests/: test_poetry_app_api.py
