[tool.poetry]
name = "pocrapi"
version = "0.1.0"
description = ""
authors = ["Antony <antony.bernadou@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.74.0"
pydantic = "^1.9.0"
uvicorn = "^0.17.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "pocrapi.main:start"

[project.urls]
Home = "https://github.com/AntonyBrd/gcp_utils"
